# checklist_review

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  pytest.yml
.omo/run-continuation/: ses_177849f51ffecU0lSwHLOjbMLe.json
config/: providers.yaml  search.yaml
config/pipelines/: education_rubric.yaml  scientific_checklist.yaml  tender_full.yaml
config/profiles/: education.yaml  scientific.yaml  tender.yaml
docs/: idea.md  plan.md
src/core/: config_loader.py  criteria.py  criteria_overview.py  criteria_resolver.py  embedding.py  pdf_processing.py  providers.py  search.py  storage.py  system.py  task_manager.py  task_persistence.py  types.py  visualizer.py  workspace.py
src/review_workflow/: review_runner.py
src/review_workflow/engine/: base.py  components.py  evaluation_merger.py  pipeline_loader.py  review_process.py  run_paths.py  token_usage.py  tool_loader.py  utils.py
src/web/analysis/: routes.py
src/web/api/: collection_service.py  review_service.py  routes.py
src/web/base/: routes.py
src/web/checklist_review/: routes.py  services.py
src/web/collection/: routes.py  services.py
src/web/frontend/: routes.py
src/web/human_verification/: routes.py  services.py
src/web/review_process_design/: routes.py
src/web/settings/: routes.py  services.py
src/web/workspace/: routes.py
tests/: conftest.py  test_api.py  test_collection_service.py  test_criteria_overview.py  test_evaluation_merger.py  test_pipeline_loader.py  test_review_service.py
(+80 files in other folders)
