[project]
name = "checklist-reviewer"
version = "0.1.0"
description = "Checklist Reviewer app – run with: uv run app.py"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "strands-agents==1.27.0",
    "ollama==0.6.1",
    "google-genai==1.64.0",
    "litellm==1.81.14",
    "pydantic==2.12.5",
    "numpy==2.4.2",
    "scikit-learn==1.8.0",
    "plotly==6.5.2",
    "requests==2.32.5",
    "typing_extensions==4.15.0",
    "pymupdf==1.27.1",
    "pymupdf4llm==0.3.4",
    "reportlab==4.4.9",
]

# Run the app: uv run app.py  (uv installs deps into .venv automatically)

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
